# forge2k

forge2k/: .gitignore  Cargo.toml
forge2k/dockerfiles/spack/: 2025.2_mpich_cascadelake_psmp.Dockerfile  2025.2_mpich_x86_64_psmp.Dockerfile  2025.2_openmpi_cascadelake_psmp.Dockerfile
forge2k/dockerfiles/toolchain/: 2023.2_mpich_generic_cuda_P100_psmp.Dockerfile  2023.2_mpich_generic_cuda_V100_psmp.Dockerfile  2023.2_mpich_generic_psmp.Dockerfile
forge2k/src/: build.rs  gui.rs  main.rs
