[package]
name = "forge2k"
version = "1.0.0"
edition = "2021"
description = "Forge2K - One-click CP2K Docker Image Builder with beautiful GUI + CLI"
authors = ["Forge2K"]
license = "MIT"

[[bin]]
name = "forge2k"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
